--- a/PhotoFrame/MainPage.xaml
+++ b/PhotoFrame/MainPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhotoFrame.MainPage"
+             xmlns:VM="clr-namespace:PhotoFrame.ViewModel"
              Title="Главная">
+    <ContentPage.BindingContext>
+        <VM:MainViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Resources>
         <Style TargetType="Border">
             <Setter Property="StrokeShape">
@@ -13,55 +17,63 @@
         </Style>
     </ContentPage.Resources>
 
-    <ScrollView>
-        <Border Margin="5" Stroke="Bisque">
-        <Grid  RowDefinitions="*,auto">
-                <StackLayout>
-
-                    
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Start">
-                <CheckBox x:Name="Generation" HorizontalOptions="Center" VerticalOptions="Center">
-                </CheckBox>
-                <Label HorizontalOptions="Center" VerticalOptions="Center">
-                    Режим генерации
-                </Label>
-                        <Border Background="#516C96" WidthRequest="30" HeightRequest="30" Margin='5' ToolTipProperties.Text="При выключении генерации останется активная картинка*">
+    <RefreshView IsRefreshing="{Binding IsRefreching}">
+        <ScrollView>
+            <Grid  RowDefinitions="auto,*,auto">
+                <Border Margin="10"  Padding="10" VerticalOptions="Start">
+                    <Border.Background>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                            <GradientStop Color="#91D7FA" Offset="0.0"/>
+                            <GradientStop Color="#91C7FA" Offset="0.5"/>
+                            <GradientStop Color="#91A1FA" Offset="1.0"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Grid ColumnDefinitions="*,auto" RowDefinitions="auto,*,auto">
+                        <Switch HorizontalOptions="Start" VerticalOptions="Center" Margin="10,10,10,10" x:Name="Generation1" IsToggled="{Binding IsChechedGenMode}"/>
+                        <Label HorizontalOptions="Center" VerticalOptions="Center" Grid.ColumnSpan="2" Margin="0,10" FontSize="20">Режим генерации</Label>
+                        <Border Background="#516C96" WidthRequest="30" HeightRequest="30" Margin='5'
+                                Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" 
+                                ToolTipProperties.Text="При выключении генерации последняя картинка останется активной*">
                             <Label Text="!" HorizontalOptions="Center" VerticalOptions="Center"/>
                         </Border>
-            </StackLayout>
-                    
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Start">
-                    <Label Margin="5,0">Промпт:</Label>
-                    <Label>Установленный текст промпта</Label>
-            </StackLayout>
-                <Border Background="White" Padding="10" Stroke="Bisque" Margin="10" IsEnabled="{Binding Source={x:Reference Generation}, Path=IsChecked}">
-                    <Grid>
-
-                            <Entry Placeholder="Введите новый промпт..." Margin="0,0,50,0">
-
-                        </Entry>
-                        <Button HorizontalOptions="End" Text="GO" CornerRadius="30" BackgroundColor="LawnGreen">
-                                
-                        </Button>
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.ColumnSpan="2" Grid.Row="1" VerticalOptions="Start">
+                            <Label FontSize="12" >Промпт:</Label>
+                            <Label FontSize="12">Установленный текст промпта</Label>
+                        </StackLayout>
+                        <Grid IsEnabled="{Binding Source={x:Reference Generation1}, Path=IsToggled}" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,20,10,5">
+                            <Entry Placeholder="Введите новый промпт..." Margin="0,0,50,0" BackgroundColor="Transparent" Text="{Binding PromptString}"/>
+                            <ImageButton HorizontalOptions="End"  CornerRadius="30" Source="wwww.png" WidthRequest="50" HeightRequest="50"/>
+                        </Grid>
                     </Grid>
-                   
                 </Border>
+
+                <Border HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="1" Grid.ColumnSpan="2" >
+                    <Border.Background>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                            <GradientStop Color="#91D7FA" Offset="0.0"/>
+                            <GradientStop Color="#91C7FA" Offset="0.5"/>
+                            <GradientStop Color="#91A1FA" Offset="1.0"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
                     <StackLayout Margin="10" >
                         <Label HorizontalOptions="Center">Активная картинка:</Label>
-                        <Image Source="cog_outline.png" BackgroundColor="Wheat" MaximumHeightRequest="300" MaximumWidthRequest="200"/>
+                        <Image Source="cog_outline.png"  MaximumWidthRequest="300"/>
                     </StackLayout>
-                    <StackLayout Margin="0,10" >
-                        <Label HorizontalOptions="Center" FontSize="12">При установке картинки режим генерации выключится*</Label>
-                        <Button Text="Установить картинку" CornerRadius="5" BackgroundColor="LawnGreen" Margin="10,0">
-
-                        </Button>
-                    </StackLayout>
-
-
+                </Border>
+                <StackLayout Margin="30" Grid.Row="2" Grid.ColumnSpan="2" >
+                    <Button Text="Установить картинку" CornerRadius="5" Margin="10,0">
+                        <Button.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#91D7FA" Offset="0.0"/>
+                                <GradientStop Color="#91C7FA" Offset="0.5"/>
+                                <GradientStop Color="#91A1FA" Offset="1.0"/>
+                            </LinearGradientBrush>
+                        </Button.Background>
+                    </Button>
+                    <Label HorizontalOptions="Center" FontSize="8">При установке картинки режим генерации выключится*</Label>
                 </StackLayout>
-
             </Grid>
-        </Border>
-    </ScrollView>
+        </ScrollView>
+    </RefreshView>
 
 </ContentPage>
