--- a/PhotoFrame/SettingsPage.xaml
+++ b/PhotoFrame/SettingsPage.xaml
@@ -2,11 +2,54 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhotoFrame.SettingsPage"
+             xmlns:VM="clr-namespace:PhotoFrame.ViewModel"
              Title="Настройки">
+    <ContentPage.BindingContext>
+        <VM:SettingViewModel/>
+    </ContentPage.BindingContext>
+
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Border Stroke="Transparent" Margin="10" Padding="10">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="15" />
+            </Border.StrokeShape>
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#91D7FA" Offset="0.0"/>
+                    <GradientStop Color="#91C7FA" Offset="0.5"/>
+                    <GradientStop Color="#91A1FA" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <VerticalStackLayout>
+                <HorizontalStackLayout>
+                    <Label Margin="10" Text="Текущий адресс:"></Label>
+                    <Label Margin="10" Text="{Binding IpAddress}"></Label>
+                </HorizontalStackLayout>
+                <Button Margin="10" Padding="10" Text="Изменить адресс" Background="AliceBlue" Command="{Binding ChangeIp}"  />
+            </VerticalStackLayout>
+
+        </Border>
+
+        <Border Stroke="Transparent" Margin="10" Padding="10">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="15" />
+            </Border.StrokeShape>
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#91D7FA" Offset="0.0"/>
+                    <GradientStop Color="#91C7FA" Offset="0.5"/>
+                    <GradientStop Color="#91A1FA" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <VerticalStackLayout>
+                <HorizontalStackLayout>
+                    <Label Margin="10" Text="Текущий ключ: "></Label>
+                    <Label Margin="10" Text="{Binding ApiKey}"></Label>
+                </HorizontalStackLayout>
+                <Button Margin="10" Padding="10" Text="Изменить api ключ" Background="AliceBlue" Command="{Binding ChangeApiKey}"/>
+            </VerticalStackLayout>
+
+        </Border>
+
     </VerticalStackLayout>
 </ContentPage>
