--- a/PhotoFrame/MainPage.xaml
+++ b/PhotoFrame/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhotoFrame.MainPage"
              xmlns:VM="clr-namespace:PhotoFrame.ViewModel"
+             xmlns:local="clr-namespace:PhotoFrame"
              Title="Главная">
     <ContentPage.BindingContext>
         <VM:MainViewModel/>
@@ -15,64 +16,83 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <local:ReverseBoolConverter x:Key="BoolConv"/>
     </ContentPage.Resources>
 
     <RefreshView IsRefreshing="{Binding IsRefreching}">
         <ScrollView>
-            <Grid  RowDefinitions="auto,*,auto">
-                <Border Margin="10"  Padding="10" VerticalOptions="Start">
-                    <Border.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                            <GradientStop Color="#91D7FA" Offset="0.0"/>
-                            <GradientStop Color="#91C7FA" Offset="0.5"/>
-                            <GradientStop Color="#91A1FA" Offset="1.0"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
-                    <Grid ColumnDefinitions="*,auto" RowDefinitions="auto,*,auto">
-                        <Switch HorizontalOptions="Start" VerticalOptions="Center" Margin="10,10,10,10" x:Name="Generation1" IsToggled="{Binding IsChechedGenMode}"/>
-                        <Label HorizontalOptions="Center" VerticalOptions="Center" Grid.ColumnSpan="2" Margin="0,10" FontSize="20">Режим генерации</Label>
-                        <Border Background="#516C96" WidthRequest="30" HeightRequest="30" Margin='5'
-                                Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" 
-                                ToolTipProperties.Text="При выключении генерации последняя картинка останется активной*">
-                            <Label Text="!" HorizontalOptions="Center" VerticalOptions="Center"/>
-                        </Border>
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.ColumnSpan="2" Grid.Row="1" VerticalOptions="Start">
-                            <Label FontSize="12" >Промпт:</Label>
-                            <Label FontSize="12">Установленный текст промпта</Label>
-                        </StackLayout>
-                        <Grid IsEnabled="{Binding Source={x:Reference Generation1}, Path=IsToggled}" Grid.Row="3" Grid.ColumnSpan="2" Margin="10,20,10,5">
-                            <Entry Placeholder="Введите новый промпт..." Margin="0,0,50,0" BackgroundColor="Transparent" Text="{Binding PromptString}"/>
-                            <ImageButton HorizontalOptions="End"  CornerRadius="30" Source="wwww.png" WidthRequest="50" HeightRequest="50"/>
-                        </Grid>
-                    </Grid>
-                </Border>
+            <Grid>
+                <Grid  RowDefinitions="auto,*,auto" IsVisible="{Binding Settings,Converter={StaticResource BoolConv}}">
 
-                <Border HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="1" Grid.ColumnSpan="2" >
-                    <Border.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                            <GradientStop Color="#91D7FA" Offset="0.0"/>
-                            <GradientStop Color="#91C7FA" Offset="0.5"/>
-                            <GradientStop Color="#91A1FA" Offset="1.0"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
-                    <StackLayout Margin="10" >
-                        <Label HorizontalOptions="Center">Активная картинка:</Label>
-                        <Image Source="cog_outline.png"  MaximumWidthRequest="300"/>
-                    </StackLayout>
-                </Border>
-                <StackLayout Margin="30" Grid.Row="2" Grid.ColumnSpan="2" >
-                    <Button Text="Установить картинку" CornerRadius="5" Margin="10,0">
-                        <Button.Background>
+                    <Border Margin="10"  Padding="10" VerticalOptions="Start">
+                        <Border.Background>
                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                 <GradientStop Color="#91D7FA" Offset="0.0"/>
                                 <GradientStop Color="#91C7FA" Offset="0.5"/>
                                 <GradientStop Color="#91A1FA" Offset="1.0"/>
                             </LinearGradientBrush>
-                        </Button.Background>
-                    </Button>
-                    <Label HorizontalOptions="Center" FontSize="8">При установке картинки режим генерации выключится*</Label>
-                </StackLayout>
+                        </Border.Background>
+                        <Grid ColumnDefinitions="*,auto" RowDefinitions="auto,*,auto">
+                            <Label HorizontalOptions="Center" VerticalOptions="Center" Grid.ColumnSpan="2" Margin="0,10" FontSize="20">Режим генерации</Label>
+                            <Border Background="#516C96" WidthRequest="30" HeightRequest="30" Margin='5'
+                                    Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" 
+                                    ToolTipProperties.Text="При выключении генерации последняя картинка останется активной*">
+                                <Label Text="!" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            </Border>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.ColumnSpan="2" Grid.Row="1" VerticalOptions="Start">
+                                <Label FontSize="12" >Промпт:</Label>
+                                <Label FontSize="12">Установленный текст промпта</Label>
+                            </StackLayout>
+                            <Grid  Grid.Row="3" Grid.ColumnSpan="2" Margin="10,20,10,5">
+                                <Entry Placeholder="Введите новый промпт..." Margin="0,0,50,0" BackgroundColor="Transparent" Text="{Binding PromptString}"/>
+                                <ImageButton HorizontalOptions="End"  CornerRadius="30" Source="wwww.png" WidthRequest="50" HeightRequest="50"/>
+                            </Grid>
+                        </Grid>
+                    </Border>
+
+                    <Border HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="1" Grid.ColumnSpan="2" >
+                        <Border.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="#91D7FA" Offset="0.0"/>
+                                <GradientStop Color="#91C7FA" Offset="0.5"/>
+                                <GradientStop Color="#91A1FA" Offset="1.0"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <StackLayout Margin="10" >
+                            <Label HorizontalOptions="Center">Активная картинка:</Label>
+                            <Image Source="{Binding Image}" HeightRequest="320" WidthRequest="480" Aspect="Fill"/>
+                        </StackLayout>
+                    </Border>
+                    <StackLayout Margin="30" Grid.Row="2" Grid.ColumnSpan="2" >
+                        <Button Text="Установить картинку" CornerRadius="5" Margin="10,0" Command="{Binding SelectImageCommand}">
+                            <Button.Background>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                    <GradientStop Color="#91D7FA" Offset="0.0"/>
+                                    <GradientStop Color="#91C7FA" Offset="0.5"/>
+                                    <GradientStop Color="#91A1FA" Offset="1.0"/>
+                                </LinearGradientBrush>
+                            </Button.Background>
+                        </Button>
+                        <Label HorizontalOptions="Center" FontSize="8">При установке картинки режим генерации выключится*</Label>
+                    </StackLayout>
+                    
+                </Grid>
+                <Border Margin="50" Grid.RowSpan="3" Background="#90616382" VerticalOptions="Center" HorizontalOptions="Center" Padding="50" IsVisible="{Binding Settings}">
+                    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                        <Label >Для продолжения работы введите ip адресс и api ключ в настройках</Label>
+                        <Button Text="Перейти в настройки" CornerRadius="5" Margin="20" Command="{Binding GoSetting}">
+                            <Button.Background>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                    <GradientStop Color="#91D7FA" Offset="0.0"/>
+                                    <GradientStop Color="#91C7FA" Offset="0.5"/>
+                                    <GradientStop Color="#91A1FA" Offset="1.0"/>
+                                </LinearGradientBrush>
+                            </Button.Background>
+                        </Button>
+                    </VerticalStackLayout>
+                </Border>
             </Grid>
+            
         </ScrollView>
     </RefreshView>
 
