--- a/PhotoFrame/MainPage.xaml
+++ b/PhotoFrame/MainPage.xaml
@@ -5,9 +5,7 @@
              xmlns:VM="clr-namespace:PhotoFrame.ViewModel"
              xmlns:local="clr-namespace:PhotoFrame"
              Title="Главная">
-    <ContentPage.BindingContext>
-        <VM:MainViewModel/>
-    </ContentPage.BindingContext>
+   
     <ContentPage.Resources>
         <Style TargetType="Border">
             <Setter Property="StrokeShape">
@@ -19,7 +17,7 @@
         <local:ReverseBoolConverter x:Key="BoolConv"/>
     </ContentPage.Resources>
 
-    <RefreshView IsRefreshing="{Binding IsRefreching}">
+    <RefreshView IsRefreshing="{Binding IsRefreching}" Command="{Binding ReloadImageCommand}">
         <ScrollView>
             <Grid>
                 <Grid  RowDefinitions="auto,*,auto" IsVisible="{Binding Settings,Converter={StaticResource BoolConv}}">
@@ -34,18 +32,9 @@
                         </Border.Background>
                         <Grid ColumnDefinitions="*,auto" RowDefinitions="auto,*,auto">
                             <Label HorizontalOptions="Center" VerticalOptions="Center" Grid.ColumnSpan="2" Margin="0,10" FontSize="20">Режим генерации</Label>
-                            <Border Background="#516C96" WidthRequest="30" HeightRequest="30" Margin='5'
-                                    Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" 
-                                    ToolTipProperties.Text="При выключении генерации последняя картинка останется активной*">
-                                <Label Text="!" HorizontalOptions="Center" VerticalOptions="Center"/>
-                            </Border>
-                            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.ColumnSpan="2" Grid.Row="1" VerticalOptions="Start">
-                                <Label FontSize="12" >Промпт:</Label>
-                                <Label FontSize="12">Установленный текст промпта</Label>
-                            </StackLayout>
                             <Grid  Grid.Row="3" Grid.ColumnSpan="2" Margin="10,20,10,5">
                                 <Entry Placeholder="Введите новый промпт..." Margin="0,0,50,0" BackgroundColor="Transparent" Text="{Binding PromptString}"/>
-                                <ImageButton HorizontalOptions="End"  CornerRadius="30" Source="wwww.png" WidthRequest="50" HeightRequest="50"/>
+                                <ImageButton HorizontalOptions="End"  CornerRadius="30" Source="wwww.png" WidthRequest="50" HeightRequest="50" Command="{Binding SendPromtCommand}"/>
                             </Grid>
                         </Grid>
                     </Border>
@@ -60,7 +49,7 @@
                         </Border.Background>
                         <StackLayout Margin="10" >
                             <Label HorizontalOptions="Center">Активная картинка:</Label>
-                            <Image Source="{Binding Image}" HeightRequest="320" WidthRequest="480" Aspect="Fill"/>
+                            <Image Source="{Binding Image}" HeightRequest="200" WidthRequest="300" Aspect="Fill"/>
                         </StackLayout>
                     </Border>
                     <StackLayout Margin="30" Grid.Row="2" Grid.ColumnSpan="2" >
